--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,13 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodels="clr-namespace:Melista.ViewModels"
         xmlns:local="clr-namespace:Melista"
-        Background="#202020" Strength="1" Height="10"
+        Background="#202020" Strength="1" 
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d"
                        
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
-        MinHeight="450" MinWidth="800" Icon="/Resources/Icons/melista.png" WindowStyle="None"
-        Title="Melista">
+        MinHeight="450" MinWidth="800" Icon="/Resources/Icons/melista.png" WindowStyle="None">
     <Grid x:Name="OuterBlurContainer" Style="{DynamicResource Background}">
 
         <Frame NavigationUIVisibility="Hidden"
