--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -77,7 +77,7 @@
 
                                 <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
                                     <Button.Background>
-                                        <ImageBrush ImageSource="/Resources/Icons/pause.png"/>
+                                        <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
                                     </Button.Background>
                                 </Button>
                                 <Grid x:Name="VideoPanel" VerticalAlignment="Bottom" Margin="20 0 20 0">
@@ -95,7 +95,7 @@
                                         </Button>
                                         <Button Height="25" Width="25" Margin="0 0 20 0" Command="{Binding PlayVideoCommand}">
                                             <Button.Background>
-                                                <ImageBrush ImageSource="/Resources/Icons/play.png"/>
+                                                <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
                                             </Button.Background>
                                         </Button>
                                         <Button Height="25" Width="25" Command="{Binding FastForward}">
