Update: делаю FullScreen

--- a/Styles/DarkTheme.xaml
+++ b/Styles/DarkTheme.xaml
@@ -357,14 +357,8 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Border Background="{StaticResource SliderBackground}" Width="5" Height="5"/>
-                        <Ellipse x:Name="BordRad" Grid.ColumnSpan="2" Fill="{StaticResource SliderBackground}" Width="{Binding Path=ActualWidth, ElementName=ThumbHeig}" Height="{Binding Path=ActualWidth, ElementName=ThumbHeig}" VerticalAlignment="Center"/>
+                        <Ellipse x:Name="BordRad" Grid.ColumnSpan="2" Fill="{StaticResource SliderBackground}" Width="15" Height="15" VerticalAlignment="Center"/>
                     </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="BordRad" Property="Height" Value="15"/>
-                            <Setter TargetName="BordRad" Property="Width" Value="15"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -393,12 +387,6 @@
                             </Track>
                         </Border>
                     </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="ThumbHeig" Property="Height" Value="15"/>
-                            <Setter TargetName="ThumbHeig" Property="Width" Value="15"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
