--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,19 +1,43 @@
-﻿<controls:BlurryWindow x:Class="Melista.MainWindow"
+﻿<Window x:Class="Melista.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodels="clr-namespace:Melista.ViewModels"
         xmlns:local="clr-namespace:Melista"
-        Background="#202020" Strength="1" 
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
-        mc:Ignorable="d"
-                       
+        mc:Ignorable="d" MinHeight="450" MinWidth="800"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
-        MinHeight="450" MinWidth="800" Icon="/Resources/Icons/melista.png" WindowStyle="None">
+        Icon="/Resources/Icons/melista.png" WindowStyle="None" ShowInTaskbar="False">
     <Grid x:Name="OuterBlurContainer" Style="{DynamicResource Background}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="204*"/>
+        </Grid.RowDefinitions>
+        <controls:BlurryUserControl Width="auto" Visibility="Visible"
+                                    Height="{Binding InterfaceVisible}" 
+                                    VerticalAlignment="Top" Background="#000000"
+                                    Opacity="0.6" BorderThickness="0"
+                                    Panel.ZIndex="100" BlurContainer="{Binding ElementName=OuterBlurContainer}"
+                                    BlurRadius="45" Magnification="0.25">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseEnter">
+                    <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                </i:EventTrigger>
+                <i:EventTrigger EventName="MouseLeave">
+                    <i:InvokeCommandAction Command="{Binding NavigateCommand2}" CommandParameter="ViewImportProgress"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Width="50" Height="32" Command="{Binding RollupCommand}" Style="{DynamicResource RollupButton}"/>
+                <Button Width="50" Height="32" Command="{Binding MinimizeCommand}" Style="{DynamicResource SizeButton}"/>
+                <Button Width="50" Height="32" Command="{Binding CloseCommand}" Style="{DynamicResource CloseButton}"/>
+            </StackPanel>
+        </controls:BlurryUserControl>
+
 
         <Frame NavigationUIVisibility="Hidden"
-               Content="{Binding PageSource}"></Frame>
+               Content="{Binding PageSource}" Grid.Row="1"></Frame>
     </Grid>
-</controls:BlurryWindow>
+</Window>
