--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -4,10 +4,11 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Melista.Views"
-      xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:local1="clr-namespace:Melista" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+      xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:local1="clr-namespace:Melista" 
+      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       DataContext="{Binding MediaPageViewModel, Source={StaticResource ViewModelLocator}}"
       xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="900"
       Title="MediaPage" x:Name="window">
 
@@ -30,7 +31,7 @@
                             <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
-                    <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" 
+                    <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Background="Black"
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
                         <Grid ClipToBounds="True">
@@ -136,7 +137,7 @@
                                                 <ImageBrush ImageSource="/Resources/Icons/volume.png"/>
                                             </Button.Background>
                                         </Button>
-                                        <Button Height="25" Width="25">
+                                        <Button Height="25" Width="25" Command="{Binding FullScreen}">
                                             <Button.Background>
                                                 <ImageBrush ImageSource="/Resources/Icons/size.png"/>
                                             </Button.Background>
