--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:local="clr-namespace:Melista"
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d" MinHeight="450" MinWidth="800"
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" AllowsTransparency="True"
+        WindowState="Maximized" MouseDown="Window_MouseDown"
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
         Icon="/Resources/Icons/melista.png" WindowStyle="None">
     <Grid x:Name="OuterBlurContainer" Style="{DynamicResource Background}">
