--- a/Views/MediaSettingWindow.xaml
+++ b/Views/MediaSettingWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Melista.Views.SettingPageWindow"
+﻿<Window x:Class="Melista.Views.MediaSettingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Melista.Views"
         mc:Ignorable="d"
-        Title="SettingPageWindow" Height="450" Width="800">
+        Title="MediaSettingWindow" Height="450" Width="800">
     <Grid>
         
     </Grid>
