--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -77,7 +77,9 @@
                         Width="200" Content="История" Margin="0 0 40 0"
                         Command="{Binding GoVid}"/>
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
-                        Width="200" Content="Загрузить" Command="{Binding LoadNewFile}"/>
+                        Width="200" Content="Загрузить" Command="{Binding LoadNewFile}" Margin="0 0 40 0"/>
+                <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
+                        Width="200" Content="Профиль" Command="{Binding OpenProfile}"/>
             </StackPanel>
         </Grid>
 
