--- a/themes/dark.xaml
+++ b/themes/dark.xaml
@@ -1,26 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:Melista.Converters">
-    
     <converters:ListItemWidthConverter x:Key="ListItemWidthConverter"></converters:ListItemWidthConverter>
     <converters:ListItemHeightConverter x:Key="ListItemHeightConverter"></converters:ListItemHeightConverter>
 
-    <Color x:Key="pwsPrimaryColor">#000000</Color>
+    <Color x:Key="pwsPrimaryColor">#ffffff</Color>
+    <Color x:Key="pwsSecondaryColor">#000000</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource pwsPrimaryColor}"/>
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource pwsSecondaryColor}"/>
 
     <Style x:Key="Background" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
-                <ImageBrush ImageSource="/Resources/Light/Light Theme.png"/>
+                <ImageBrush ImageSource="/Resources/Dark/Dark Theme.png"/>
             </Setter.Value>
         </Setter>
     </Style>
     <Style x:Key="TextStyle1" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="FontWeight" Value="Light"/>
     </Style>
     <Style x:Key="TextStyle2" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="#414141"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="14"/>
@@ -29,19 +30,31 @@
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-                    <GradientStop Color="#99FFFFFF"/>
-                    <GradientStop Color="#4CFFFFFF" Offset="0.4"/>
-                    <GradientStop Color="#99FFFFFF" Offset="1"/>
-                    <GradientStop Color="#4CFFFFFF" Offset="0.7"/>
+                    <GradientStop Color="#99292929"/>
+                    <GradientStop Color="#99000000" Offset="0.4"/>
+                    <GradientStop Color="#99292929" Offset="1"/>
+                    <GradientStop Color="#99000000" Offset="0.7"/>
                 </LinearGradientBrush>
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="ContentControlStyle" TargetType="ContentControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ContentControl}">
+                    <Border CornerRadius="20" Background="Black" ClipToBounds="True">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"></ContentPresenter>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+   
     <Style x:Key="ButtonOne" TargetType="Button">
-        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Light"/>
-        <Setter Property="Background" Value="#7FFFFFFF"/>
+        <Setter Property="Background" Value="#7F000000"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -53,42 +66,43 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="White"/>
+                <Setter Property="Background" Value="Black"/>
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="FilePanel" TargetType="Border">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="White" Opacity="0.6"></SolidColorBrush>
+                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
             </Setter.Value>
         </Setter>
         <Setter Property="CornerRadius" Value="20 20 0 0"/>
     </Style>
     <Style x:Key="BottomPanel" TargetType="Grid">
-        <Setter Property="Background" Value="#4CFFFFFF"/>
+        <Setter Property="Background" Value="#4C000000"/>
     </Style>
     <Style x:Key="RightPanel" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="White" Opacity="0.6"></SolidColorBrush>
+                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
             </Setter.Value>
         </Setter>
     </Style>
 
     <Style x:Key="SearchBox" TargetType="TextBox">
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="#414141"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="BorderThickness" Value="0"/>
     </Style>
     <Style x:Key="Search Icon" TargetType="Image">
-        <Setter Property="Source" Value="/Resources/Light/search.png"/>
+        <Setter Property="Source" Value="/Resources/Dark/search.png"/>
     </Style>
 
     <Style x:Key="ComboBoxTest2" TargetType="{x:Type ComboBox}">
-        <Setter x:Name="Fore" Property="Foreground" Value="#414141"/>
+        <Setter x:Name="Fore" Property="Foreground" Value="White"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="SelectedIndex" Value="0"/>
@@ -106,7 +120,7 @@
                                         </Grid.ColumnDefinitions>
                                         <Border x:Name="Border" CornerRadius="11 0 0 11" Grid.ColumnSpan="2" Background="Transparent" BorderThickness="0" />
                                         <Border Grid.Column="0" Margin="1"  Background="Transparent"  BorderThickness="0" />
-                                        <Path x:Name="Arrow" Grid.Column="1"  Fill="#414141" HorizontalAlignment="Right" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z"/>
+                                        <Path x:Name="Arrow" Grid.Column="1"  Fill="White" HorizontalAlignment="Right" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z"/>
                                     </Grid>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="ToggleButton.IsMouseOver" Value="true">
@@ -152,12 +166,12 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
+
     <Style TargetType="{x:Type ListView}">
         <Setter Property="TextBlock.TextAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="#414141"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="SelectionMode" Value="Single"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -169,7 +183,7 @@
 
 
                     <Setter Property="FontSize" Value="20"/>
-                    <Setter Property="Background" Value="White"/>
+                    <Setter Property="Background" Value="#414141"/>
                     <Setter Property="BorderThickness" Value="0"/>
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -177,7 +191,7 @@
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}" 
+                                        BorderThickness="{TemplateBinding BorderThickness}"
                                         CornerRadius="19" Margin="15" x:Name="border">
                                     <StackPanel>
                                         <Border CornerRadius="16"  Height="{Binding Path=ActualWidth, ElementName=border,Converter={StaticResource ListItemHeightConverter}}" Width="{Binding Path=ActualWidth, ElementName=border}">
@@ -196,14 +210,30 @@
                     </Setter>
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#414141"/>
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation To="White" Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" 
+                                                         Duration="0:0:0.8"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="#414141"/>
+                        </Trigger>
+                        
+                        <Trigger Property="IsMouseOver" Value="False">
                             <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="Background" Value="#414141"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
             </Setter.Value>
         </Setter>
     </Style>
+    
+    <!--ScrollBar-->
 
     <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
         <Setter Property="Template">
@@ -230,12 +260,12 @@
     <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Foreground" Value="#7F1F93E5"/>
-        <Setter Property="Background" Value="white"/>
+        <Setter Property="Background" Value="#414141"/>
         <Setter Property="Width" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ScrollBar}">
-                    <Border x:Name="GridRoot" Width="12" Background="White" CornerRadius="5">
+                    <Border x:Name="GridRoot" Width="12" Background="#414141" CornerRadius="5">
                         <Track x:Name="PART_Track" Grid.Row="0" IsDirectionReversed="true" Focusable="False">
                             <Track.Thumb>
                                 <Thumb x:Name="Thumb" Background="{TemplateBinding Foreground}" Style="{DynamicResource ScrollThumbs}"/>
@@ -284,7 +314,7 @@
     </Style>
 
     <!--слайдер видео-->
-    
+
     <LinearGradientBrush x:Key="SliderBackground"  StartPoint="0,0" EndPoint="0,1">
         <GradientStop Offset="0" Color="#59ccfc"/>
         <GradientStop Offset="0.5" Color="#00b3fe"/>
@@ -299,7 +329,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RepeatButton">
-                    <Border Background="{StaticResource SliderBackground}"  CornerRadius="5 0 0 5"/>
+                    <Border Background="{StaticResource SliderBackground}" CornerRadius="5 0 0 5"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -311,7 +341,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RepeatButton">
-                    <Border Background="White" CornerRadius="0 5 5 0"/>
+                    <Border Background="#414141" CornerRadius="0 5 5 0"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -328,18 +358,17 @@
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Border Background="{StaticResource SliderBackground}"/>
-                        <Border Grid.ColumnSpan="2" CornerRadius="4"  Background="{StaticResource SliderBackground}" Width="15">
-                        </Border>
+                        <Border Background="{StaticResource SliderBackground}" Width="5" Height="5"/>
+                        <Ellipse x:Name="BordRad" Grid.ColumnSpan="2" Fill="{StaticResource SliderBackground}" Width="15" Height="15" VerticalAlignment="Center"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-
     <Style x:Key="Slider_CustomStyle" TargetType="Slider">
         <Setter Property="Focusable" Value="false" />
+        <Setter Property="Height" Value="5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Slider">
@@ -347,15 +376,15 @@
                         <Border Grid.Column="1" CornerRadius="10">
                             <Track Grid.Column="1" Name="PART_Track">
                                 <Track.DecreaseRepeatButton>
-                                    <RepeatButton Style="{StaticResource Slider_RepeatButton}"  
+                                    <RepeatButton Height="5" Style="{StaticResource Slider_RepeatButton}"  
                                 Command="Slider.DecreaseLarge"/>
                                 </Track.DecreaseRepeatButton>
                                 <Track.IncreaseRepeatButton>
-                                    <RepeatButton Style="{StaticResource Slider_RepeatButton1}"  
+                                    <RepeatButton Height="5" Style="{StaticResource Slider_RepeatButton1}"  
                                 Command="Slider.IncreaseLarge"/>
                                 </Track.IncreaseRepeatButton>
                                 <Track.Thumb>
-                                    <Thumb Style="{StaticResource Slider_Thumb}"/>
+                                    <Thumb x:Name="ThumbHeig" Height="15" Width="15" Style="{StaticResource Slider_Thumb}"/>
                                 </Track.Thumb>
                             </Track>
                         </Border>
@@ -364,7 +393,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-
+    
     <!--button-->
 
     <Style TargetType="{x:Type Button}">
