--- a/themes/light.xaml
+++ b/themes/light.xaml
@@ -1,25 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:Melista.Converters">
+    
     <converters:ListItemWidthConverter x:Key="ListItemWidthConverter"></converters:ListItemWidthConverter>
     <converters:ListItemHeightConverter x:Key="ListItemHeightConverter"></converters:ListItemHeightConverter>
 
-    <Color x:Key="pwsPrimaryColor">#ffffff</Color>
+    <Color x:Key="pwsPrimaryColor">#000000</Color>
+    <Color x:Key="pwsSecondaryColor">#FFFFFF</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource pwsPrimaryColor}"/>
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource pwsSecondaryColor}"/>
 
     <Style x:Key="Background" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
-                <ImageBrush ImageSource="/Resources/Dark/Dark Theme.png"/>
+                <ImageBrush ImageSource="/Resources/Light/Light Theme.png"/>
             </Setter.Value>
         </Setter>
     </Style>
     <Style x:Key="TextStyle1" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="FontWeight" Value="Light"/>
     </Style>
     <Style x:Key="TextStyle2" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="#414141"/>
         <Setter Property="FontFamily" Value="{StaticResource Font}"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="14"/>
@@ -28,31 +31,19 @@
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-                    <GradientStop Color="#99292929"/>
-                    <GradientStop Color="#99000000" Offset="0.4"/>
-                    <GradientStop Color="#99292929" Offset="1"/>
-                    <GradientStop Color="#99000000" Offset="0.7"/>
+                    <GradientStop Color="#99FFFFFF"/>
+                    <GradientStop Color="#4CFFFFFF" Offset="0.4"/>
+                    <GradientStop Color="#99FFFFFF" Offset="1"/>
+                    <GradientStop Color="#4CFFFFFF" Offset="0.7"/>
                 </LinearGradientBrush>
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="ContentControlStyle" TargetType="ContentControl">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ContentControl}">
-                    <Border CornerRadius="20" Background="Black" ClipToBounds="True">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"></ContentPresenter>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-   
     <Style x:Key="ButtonOne" TargetType="Button">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Light"/>
-        <Setter Property="Background" Value="#7F000000"/>
+        <Setter Property="Background" Value="#7FFFFFFF"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -64,43 +55,42 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="Black"/>
+                <Setter Property="Background" Value="White"/>
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="FilePanel" TargetType="Border">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
+                <SolidColorBrush Color="White" Opacity="0.6"></SolidColorBrush>
             </Setter.Value>
         </Setter>
         <Setter Property="CornerRadius" Value="20 20 0 0"/>
     </Style>
     <Style x:Key="BottomPanel" TargetType="Grid">
-        <Setter Property="Background" Value="#4C000000"/>
+        <Setter Property="Background" Value="#4CFFFFFF"/>
     </Style>
     <Style x:Key="RightPanel" TargetType="Grid">
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="Black" Opacity="0.6"></SolidColorBrush>
+                <SolidColorBrush Color="White" Opacity="0.6"></SolidColorBrush>
             </Setter.Value>
         </Setter>
     </Style>
 
     <Style x:Key="SearchBox" TargetType="TextBox">
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="#414141"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="BorderThickness" Value="0"/>
     </Style>
     <Style x:Key="Search Icon" TargetType="Image">
-        <Setter Property="Source" Value="/Resources/Dark/search.png"/>
+        <Setter Property="Source" Value="/Resources/Light/search.png"/>
     </Style>
 
     <Style x:Key="ComboBoxTest2" TargetType="{x:Type ComboBox}">
-        <Setter x:Name="Fore" Property="Foreground" Value="White"/>
+        <Setter x:Name="Fore" Property="Foreground" Value="#414141"/>
         <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="SelectedIndex" Value="0"/>
@@ -118,7 +108,7 @@
                                         </Grid.ColumnDefinitions>
                                         <Border x:Name="Border" CornerRadius="11 0 0 11" Grid.ColumnSpan="2" Background="Transparent" BorderThickness="0" />
                                         <Border Grid.Column="0" Margin="1"  Background="Transparent"  BorderThickness="0" />
-                                        <Path x:Name="Arrow" Grid.Column="1"  Fill="White" HorizontalAlignment="Right" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z"/>
+                                        <Path x:Name="Arrow" Grid.Column="1"  Fill="#414141" HorizontalAlignment="Right" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z"/>
                                     </Grid>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="ToggleButton.IsMouseOver" Value="true">
@@ -164,12 +154,12 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
+    
     <Style TargetType="{x:Type ListView}">
         <Setter Property="TextBlock.TextAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="#414141"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="SelectionMode" Value="Single"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -181,7 +171,7 @@
 
 
                     <Setter Property="FontSize" Value="20"/>
-                    <Setter Property="Background" Value="#414141"/>
+                    <Setter Property="Background" Value="White"/>
                     <Setter Property="BorderThickness" Value="0"/>
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -189,7 +179,7 @@
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        BorderThickness="{TemplateBinding BorderThickness}" 
                                         CornerRadius="19" Margin="15" x:Name="border">
                                     <StackPanel>
                                         <Border CornerRadius="16"  Height="{Binding Path=ActualWidth, ElementName=border,Converter={StaticResource ListItemHeightConverter}}" Width="{Binding Path=ActualWidth, ElementName=border}">
@@ -208,30 +198,14 @@
                     </Setter>
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Trigger.EnterActions>
-                                <BeginStoryboard>
-                                    <Storyboard>
-                                        <ColorAnimation To="White" Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" 
-                                                         Duration="0:0:0.8"/>
-                                    </Storyboard>
-                                </BeginStoryboard>
-                            </Trigger.EnterActions>
-                        </Trigger>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Foreground" Value="#414141"/>
-                        </Trigger>
-                        
-                        <Trigger Property="IsMouseOver" Value="False">
-                            <Setter Property="Foreground" Value="White"/>
                             <Setter Property="Background" Value="#414141"/>
+                            <Setter Property="Foreground" Value="White"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
             </Setter.Value>
         </Setter>
     </Style>
-    
-    <!--ScrollBar-->
 
     <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
         <Setter Property="Template">
@@ -258,12 +232,12 @@
     <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Foreground" Value="#7F1F93E5"/>
-        <Setter Property="Background" Value="#414141"/>
+        <Setter Property="Background" Value="white"/>
         <Setter Property="Width" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ScrollBar}">
-                    <Border x:Name="GridRoot" Width="12" Background="#414141" CornerRadius="5">
+                    <Border x:Name="GridRoot" Width="12" Background="White" CornerRadius="5">
                         <Track x:Name="PART_Track" Grid.Row="0" IsDirectionReversed="true" Focusable="False">
                             <Track.Thumb>
                                 <Thumb x:Name="Thumb" Background="{TemplateBinding Foreground}" Style="{DynamicResource ScrollThumbs}"/>
@@ -312,7 +286,7 @@
     </Style>
 
     <!--слайдер видео-->
-
+    
     <LinearGradientBrush x:Key="SliderBackground"  StartPoint="0,0" EndPoint="0,1">
         <GradientStop Offset="0" Color="#59ccfc"/>
         <GradientStop Offset="0.5" Color="#00b3fe"/>
@@ -322,12 +296,15 @@
         <GradientStop Offset="0" Color="#FFD9D3E8"/>
     </LinearGradientBrush>
 
+
+   
+
     <Style x:Key="Slider_RepeatButton" TargetType="RepeatButton">
         <Setter Property="Focusable" Value="false" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RepeatButton">
-                    <Border Background="{StaticResource SliderBackground}" CornerRadius="5 0 0 5"/>
+                    <Border Background="{StaticResource SliderBackground}"  CornerRadius="5 0 0 5"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -339,7 +316,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="RepeatButton">
-                    <Border Background="#414141" CornerRadius="0 5 5 0"/>
+                    <Border Background="White" CornerRadius="0 5 5 0"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -391,7 +368,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <!--button-->
 
     <Style TargetType="{x:Type Button}">
@@ -413,7 +390,7 @@
                     <Grid x:Name="GridBg" Background="Transparent">
                         <Border Height="18">
                             <Border.Background>
-                                <ImageBrush ImageSource="/Resources/Dark/close.png" Stretch="Uniform"/>
+                                <ImageBrush ImageSource="/Resources/Light/close.png" Stretch="Uniform"/>
                             </Border.Background>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
@@ -435,14 +412,14 @@
                     <Grid x:Name="GridBg" Background="Transparent">
                         <Border Height="18">
                             <Border.Background>
-                                <ImageBrush ImageSource="/Resources/Dark/minimize.png" Stretch="Uniform"/>
+                                <ImageBrush ImageSource="/Resources/Light/minimize.png" Stretch="Uniform"/>
                             </Border.Background>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="GridBg" Property="Background" Value="#414141"/>
+                            <Setter TargetName="GridBg" Property="Background" Value="#919191"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -457,14 +434,14 @@
                     <Grid x:Name="GridBg" Background="Transparent">
                         <Border Height="18">
                             <Border.Background>
-                                <ImageBrush ImageSource="/Resources/Dark/rollup.png" Stretch="Uniform"/>
+                                <ImageBrush ImageSource="/Resources/Light/rollup.png" Stretch="Uniform"/>
                             </Border.Background>
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="GridBg" Property="Background" Value="#414141"/>
+                            <Setter TargetName="GridBg" Property="Background" Value="#919191"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
