--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -15,11 +15,16 @@
       >
 
     <Grid ClipToBounds="True">
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="MouseMove">
+                <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
             <ColumnDefinition Width="300"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
+        
         <ScrollViewer Grid.Column="0" VerticalScrollBarVisibility="Hidden">
             <Grid ClipToBounds="True">
                 <Grid.RowDefinitions>
@@ -28,36 +33,30 @@
                 </Grid.RowDefinitions>
 
                 <Grid ClipToBounds="True" x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="MouseMove">
-                            <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
+                    
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Background="Black"
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
-                        <Grid>
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="MouseMove">
-                                    <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-                            <vlc:VideoView x:Name="Video" MediaPlayer="{Binding Player}" Loaded="Video_Loaded">
-                                <Grid>
-                                    <Grid Visibility="Visible">
 
-                                        <Border VerticalAlignment="Bottom" Height="{Binding Path=ActualHeight, ElementName=VideoPanel}" CornerRadius="20">
-                                            <controls:BlurryUserControl
-                                    Background="Transparent"
-                                    BlurContainer="{Binding ElementName=Video}"
-                                    BlurRadius="45"
-                                    Magnification="0.25">
-                                                <controls:BlurryUserControl.Clip>
-                                                    <RectangleGeometry RadiusX="20" RadiusY="20" 
-                                                           Rect="{Binding Path=ActualHeight, ElementName=window, Converter={StaticResource BlurPanelConverter}}"></RectangleGeometry>
-                                                </controls:BlurryUserControl.Clip>
-                                            </controls:BlurryUserControl>
-                                        </Border>
+                        <Grid x:Name="vgrid" MouseMove="Video_MouseMove">
+
+
+                            <vlc:VideoView x:Name="Video" MediaPlayer="{Binding Player}" Loaded="Video_Loaded">
+                                
+                                <Grid>
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="MouseMove">
+                                            <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <Grid Visibility="Visible">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="MouseMove">
+                                                <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+
+
 
                                         <Border HorizontalAlignment="Center" Height="75" Width="75">
                                             <controls:BlurryUserControl
@@ -72,7 +71,7 @@
                                             </controls:BlurryUserControl>
                                         </Border>
 
-                                        <Button Height="25" Width="25" Command="{Binding PlayVideoCommand}">
+                                        <Button x:Name="playpause" Height="25" Width="25" Command="{Binding PlayVideoCommand}">
                                             <Button.Background>
                                                 <ImageBrush ImageSource="{Binding PlayPauseImage}"/>
                                             </Button.Background>
