--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d" MinHeight="450" MinWidth="800"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors" AllowsTransparency="False"
-        WindowState="Maximized" MouseDown="Window_MouseDown"
+        WindowState="Maximized" MouseLeftButtonDown="Window_MouseDown"
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
         Icon="/Resources/Icons/melista.png" WindowStyle="None" >
     <Grid x:Name="OuterBlurContainer" Style="{DynamicResource Background}">
