--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -8,11 +8,12 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:viewmodels="clr-namespace:Melista.ViewModels" xmlns:local1="clr-namespace:Melista"
       DataContext="{Binding StartPageViewModel, Source={StaticResource ViewModelLocator}}"
+      xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="StartPageView">
 
-    <Grid>
+    <Grid x:Name="Aboba">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
@@ -82,7 +83,15 @@
                         Width="200" Content="Профиль" Command="{Binding OpenProfile}"/>
             </StackPanel>
         </Grid>
-
+        <controls:BlurryUserControl Height="200" Width="250" Grid.Column="1"
+                                    BorderBrush="Black"
+                                    Background="Transparent"
+                                    BorderThickness="1"
+                                    DragMoveEnabled="True"
+                                    Panel.ZIndex="100"
+                                    BlurContainer="{Binding ElementName=Aboba}"
+                                    BlurRadius="45"
+                                    Magnification="0.25"/>
     </Grid>
 
 </Page>
