--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -12,10 +12,7 @@
         DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
         Icon="/Resources/Icons/melista.png" WindowStyle="None" >
     <Grid x:Name="OuterBlurContainer" Style="{DynamicResource Background}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="204*"/>
-        </Grid.RowDefinitions>
+        
         <controls:BlurryUserControl Width="auto" Visibility="Visible"
                                     Height="{Binding InterfaceVisible}" 
                                     VerticalAlignment="Top" Background="{DynamicResource SecondaryBrush}"
@@ -39,6 +36,6 @@
 
 
         <Frame NavigationUIVisibility="Hidden"
-               Content="{Binding PageSource}" Grid.Row="1"></Frame>
+               Content="{Binding PageSource}"></Frame>
     </Grid>
 </Window>
